--- a/trunk/oma2/oma2/Preferences.xib
+++ b/trunk/oma2/oma2/Preferences.xib
@@ -58,9 +58,9 @@
 						<object class="NSTabView" id="650804698">
 							<reference key="NSNextResponder" ref="1006"/>
 							<int key="NSvFlags">12</int>
-							<string key="NSFrame">{{56, -10}, {697, 526}}</string>
+							<string key="NSFrame">{{13, 6}, {697, 526}}</string>
 							<reference key="NSSuperview" ref="1006"/>
-							<reference key="NSNextKeyView" ref="405010109"/>
+							<reference key="NSWindow"/>
 							<string key="NSReuseIdentifierKey">_NS:608</string>
 							<object class="NSMutableArray" key="NSTabViewItems">
 								<bool key="EncodedWithXMLCoder">YES</bool>
@@ -137,6 +137,7 @@
 												<int key="NSvFlags">268</int>
 												<string key="NSFrame">{{274, 451}, {54, 17}}</string>
 												<reference key="NSSuperview" ref="405010109"/>
+												<reference key="NSWindow"/>
 												<reference key="NSNextKeyView" ref="936561961"/>
 												<string key="NSReuseIdentifierKey">_NS:3944</string>
 												<bool key="NSEnabled">YES</bool>
@@ -168,6 +169,7 @@
 												<int key="NSvFlags">268</int>
 												<string key="NSFrame">{{547, 451}, {54, 17}}</string>
 												<reference key="NSSuperview" ref="405010109"/>
+												<reference key="NSWindow"/>
 												<reference key="NSNextKeyView" ref="971644841"/>
 												<string key="NSReuseIdentifierKey">_NS:3944</string>
 												<bool key="NSEnabled">YES</bool>
@@ -187,6 +189,7 @@
 												<int key="NSvFlags">268</int>
 												<string key="NSFrame">{{14, 425}, {102, 17}}</string>
 												<reference key="NSSuperview" ref="405010109"/>
+												<reference key="NSWindow"/>
 												<reference key="NSNextKeyView" ref="71578599"/>
 												<string key="NSReuseIdentifierKey">_NS:3944</string>
 												<bool key="NSEnabled">YES</bool>
@@ -206,6 +209,7 @@
 												<int key="NSvFlags">268</int>
 												<string key="NSFrame">{{19, 393}, {96, 17}}</string>
 												<reference key="NSSuperview" ref="405010109"/>
+												<reference key="NSWindow"/>
 												<reference key="NSNextKeyView" ref="659288098"/>
 												<string key="NSReuseIdentifierKey">_NS:3944</string>
 												<bool key="NSEnabled">YES</bool>
@@ -225,6 +229,7 @@
 												<int key="NSvFlags">268</int>
 												<string key="NSFrame">{{37, 361}, {79, 17}}</string>
 												<reference key="NSSuperview" ref="405010109"/>
+												<reference key="NSWindow"/>
 												<reference key="NSNextKeyView" ref="38821514"/>
 												<string key="NSReuseIdentifierKey">_NS:3944</string>
 												<bool key="NSEnabled">YES</bool>
@@ -244,6 +249,7 @@
 												<int key="NSvFlags">268</int>
 												<string key="NSFrame">{{30, 329}, {85, 17}}</string>
 												<reference key="NSSuperview" ref="405010109"/>
+												<reference key="NSWindow"/>
 												<reference key="NSNextKeyView" ref="629531668"/>
 												<string key="NSReuseIdentifierKey">_NS:3944</string>
 												<bool key="NSEnabled">YES</bool>
@@ -263,6 +269,7 @@
 												<int key="NSvFlags">268</int>
 												<string key="NSFrame">{{121, 422}, {361, 22}}</string>
 												<reference key="NSSuperview" ref="405010109"/>
+												<reference key="NSWindow"/>
 												<reference key="NSNextKeyView" ref="945192704"/>
 												<string key="NSReuseIdentifierKey">_NS:903</string>
 												<bool key="NSEnabled">YES</bool>
@@ -296,6 +303,7 @@
 												<int key="NSvFlags">268</int>
 												<string key="NSFrame">{{121, 390}, {361, 22}}</string>
 												<reference key="NSSuperview" ref="405010109"/>
+												<reference key="NSWindow"/>
 												<reference key="NSNextKeyView" ref="205447636"/>
 												<string key="NSReuseIdentifierKey">_NS:903</string>
 												<bool key="NSEnabled">YES</bool>
@@ -316,6 +324,7 @@
 												<int key="NSvFlags">268</int>
 												<string key="NSFrame">{{121, 358}, {361, 22}}</string>
 												<reference key="NSSuperview" ref="405010109"/>
+												<reference key="NSWindow"/>
 												<reference key="NSNextKeyView" ref="1028100363"/>
 												<string key="NSReuseIdentifierKey">_NS:903</string>
 												<bool key="NSEnabled">YES</bool>
@@ -336,6 +345,7 @@
 												<int key="NSvFlags">268</int>
 												<string key="NSFrame">{{121, 326}, {361, 22}}</string>
 												<reference key="NSSuperview" ref="405010109"/>
+												<reference key="NSWindow"/>
 												<reference key="NSNextKeyView" ref="646888755"/>
 												<string key="NSReuseIdentifierKey">_NS:903</string>
 												<bool key="NSEnabled">YES</bool>
@@ -356,6 +366,7 @@
 												<int key="NSvFlags">268</int>
 												<string key="NSFrame">{{542, 422}, {62, 22}}</string>
 												<reference key="NSSuperview" ref="405010109"/>
+												<reference key="NSWindow"/>
 												<reference key="NSNextKeyView" ref="551836010"/>
 												<string key="NSReuseIdentifierKey">_NS:903</string>
 												<bool key="NSEnabled">YES</bool>
@@ -376,6 +387,7 @@
 												<int key="NSvFlags">268</int>
 												<string key="NSFrame">{{543, 390}, {62, 22}}</string>
 												<reference key="NSSuperview" ref="405010109"/>
+												<reference key="NSWindow"/>
 												<reference key="NSNextKeyView" ref="256902137"/>
 												<string key="NSReuseIdentifierKey">_NS:903</string>
 												<bool key="NSEnabled">YES</bool>
@@ -396,6 +408,7 @@
 												<int key="NSvFlags">268</int>
 												<string key="NSFrame">{{542, 358}, {62, 22}}</string>
 												<reference key="NSSuperview" ref="405010109"/>
+												<reference key="NSWindow"/>
 												<reference key="NSNextKeyView" ref="622657139"/>
 												<string key="NSReuseIdentifierKey">_NS:903</string>
 												<bool key="NSEnabled">YES</bool>
@@ -416,6 +429,7 @@
 												<int key="NSvFlags">268</int>
 												<string key="NSFrame">{{543, 326}, {62, 22}}</string>
 												<reference key="NSSuperview" ref="405010109"/>
+												<reference key="NSWindow"/>
 												<reference key="NSNextKeyView" ref="711536789"/>
 												<string key="NSReuseIdentifierKey">_NS:903</string>
 												<bool key="NSEnabled">YES</bool>
@@ -436,7 +450,7 @@
 												<int key="NSvFlags">268</int>
 												<string key="NSFrame">{{534, 9}, {59, 32}}</string>
 												<reference key="NSSuperview" ref="405010109"/>
-												<reference key="NSNextKeyView"/>
+												<reference key="NSWindow"/>
 												<string key="NSReuseIdentifierKey">_NS:687</string>
 												<bool key="NSEnabled">YES</bool>
 												<object class="NSButtonCell" key="NSCell" id="461339295">
@@ -459,6 +473,7 @@
 												<int key="NSvFlags">268</int>
 												<string key="NSFrame">{{121, 220}, {96, 22}}</string>
 												<reference key="NSSuperview" ref="405010109"/>
+												<reference key="NSWindow"/>
 												<reference key="NSNextKeyView" ref="870145194"/>
 												<string key="NSReuseIdentifierKey">_NS:903</string>
 												<bool key="NSEnabled">YES</bool>
@@ -477,6 +492,7 @@
 										</object>
 										<string key="NSFrame">{{10, 33}, {677, 480}}</string>
 										<reference key="NSSuperview" ref="650804698"/>
+										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="214474569"/>
 									</object>
 									<string key="NSLabel">Prefixes</string>
@@ -497,9 +513,10 @@
 					</object>
 					<string key="NSFrameSize">{723, 542}</string>
 					<reference key="NSSuperview"/>
+					<reference key="NSWindow"/>
 					<reference key="NSNextKeyView" ref="650804698"/>
 				</object>
-				<string key="NSScreenRect">{{0, 0}, {1280, 778}}</string>
+				<string key="NSScreenRect">{{0, 0}, {1440, 878}}</string>
 				<string key="NSMaxSize">{10000000000000, 10000000000000}</string>
 				<bool key="NSWindowIsRestorable">YES</bool>
 			</object>
@@ -1187,7 +1204,111 @@
 			<nil key="sourceID"/>
 			<int key="maxID">73</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes"/>
+		<object class="IBClassDescriber" key="IBDocument.Classes">
+			<object class="NSMutableArray" key="referencedPartialClassDescriptions">
+				<bool key="EncodedWithXMLCoder">YES</bool>
+				<object class="IBPartialClassDescription">
+					<string key="className">PreferenceController</string>
+					<string key="superclassName">NSWindowController</string>
+					<object class="NSMutableDictionary" key="actions">
+						<string key="NS.key.0">newSavePrefix:</string>
+						<string key="NS.object.0">id</string>
+					</object>
+					<object class="NSMutableDictionary" key="actionInfosByName">
+						<string key="NS.key.0">newSavePrefix:</string>
+						<object class="IBActionInfo" key="NS.object.0">
+							<string key="name">newSavePrefix:</string>
+							<string key="candidateClassName">id</string>
+						</object>
+					</object>
+					<object class="NSMutableDictionary" key="outlets">
+						<bool key="EncodedWithXMLCoder">YES</bool>
+						<object class="NSArray" key="dict.sortedKeys">
+							<bool key="EncodedWithXMLCoder">YES</bool>
+							<string>getPrefix</string>
+							<string>getSuffix</string>
+							<string>macroPrefix</string>
+							<string>macroSuffix</string>
+							<string>savePrefix</string>
+							<string>saveSuffix</string>
+							<string>settingsPrefix</string>
+							<string>settingsSuffix</string>
+							<string>sometext</string>
+						</object>
+						<object class="NSMutableArray" key="dict.values">
+							<bool key="EncodedWithXMLCoder">YES</bool>
+							<string>NSTextField</string>
+							<string>NSTextField</string>
+							<string>NSTextField</string>
+							<string>NSTextField</string>
+							<string>NSTextField</string>
+							<string>NSTextField</string>
+							<string>NSTextField</string>
+							<string>NSTextField</string>
+							<string>NSString</string>
+						</object>
+					</object>
+					<object class="NSMutableDictionary" key="toOneOutletInfosByName">
+						<bool key="EncodedWithXMLCoder">YES</bool>
+						<object class="NSArray" key="dict.sortedKeys">
+							<bool key="EncodedWithXMLCoder">YES</bool>
+							<string>getPrefix</string>
+							<string>getSuffix</string>
+							<string>macroPrefix</string>
+							<string>macroSuffix</string>
+							<string>savePrefix</string>
+							<string>saveSuffix</string>
+							<string>settingsPrefix</string>
+							<string>settingsSuffix</string>
+							<string>sometext</string>
+						</object>
+						<object class="NSMutableArray" key="dict.values">
+							<bool key="EncodedWithXMLCoder">YES</bool>
+							<object class="IBToOneOutletInfo">
+								<string key="name">getPrefix</string>
+								<string key="candidateClassName">NSTextField</string>
+							</object>
+							<object class="IBToOneOutletInfo">
+								<string key="name">getSuffix</string>
+								<string key="candidateClassName">NSTextField</string>
+							</object>
+							<object class="IBToOneOutletInfo">
+								<string key="name">macroPrefix</string>
+								<string key="candidateClassName">NSTextField</string>
+							</object>
+							<object class="IBToOneOutletInfo">
+								<string key="name">macroSuffix</string>
+								<string key="candidateClassName">NSTextField</string>
+							</object>
+							<object class="IBToOneOutletInfo">
+								<string key="name">savePrefix</string>
+								<string key="candidateClassName">NSTextField</string>
+							</object>
+							<object class="IBToOneOutletInfo">
+								<string key="name">saveSuffix</string>
+								<string key="candidateClassName">NSTextField</string>
+							</object>
+							<object class="IBToOneOutletInfo">
+								<string key="name">settingsPrefix</string>
+								<string key="candidateClassName">NSTextField</string>
+							</object>
+							<object class="IBToOneOutletInfo">
+								<string key="name">settingsSuffix</string>
+								<string key="candidateClassName">NSTextField</string>
+							</object>
+							<object class="IBToOneOutletInfo">
+								<string key="name">sometext</string>
+								<string key="candidateClassName">NSString</string>
+							</object>
+						</object>
+					</object>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/PreferenceController.h</string>
+					</object>
+				</object>
+			</object>
+		</object>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaFramework</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginDeclaredDevelopmentDependencies">
