--- a/oma2/oma2/Status.xib
+++ b/oma2/oma2/Status.xib
@@ -1209,14 +1209,6 @@ AAMAAAABAAEAAAFTAAMAAAAEAAAFwgAAAAAACAAIAAgACAABAAEAAQABA</bytes>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBOutletConnection" key="connection">
-						<string key="label">toolSelected</string>
-						<reference key="source" ref="594875767"/>
-						<reference key="destination" ref="78601372"/>
-					</object>
-					<int key="connectionID">275</int>
-				</object>
-				<object class="IBConnectionRecord">
-					<object class="IBOutletConnection" key="connection">
 						<string key="label">ColorMaxLabel</string>
 						<reference key="source" ref="594875767"/>
 						<reference key="destination" ref="284205641"/>
@@ -1270,6 +1262,30 @@ AAMAAAABAAEAAAFTAAMAAAAEAAAFwgAAAAAACAAIAAgACAABAAEAAQABA</bytes>
 						<reference key="destination" ref="669491963"/>
 					</object>
 					<int key="connectionID">316</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBOutletConnection" key="connection">
+						<string key="label">toolSelected</string>
+						<reference key="source" ref="594875767"/>
+						<reference key="destination" ref="78601372"/>
+					</object>
+					<int key="connectionID">385</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBBindingConnection" key="connection">
+						<string key="label">selectedIndex: tool_selected</string>
+						<reference key="source" ref="78601372"/>
+						<reference key="destination" ref="594875767"/>
+						<object class="NSNibBindingConnector" key="connector">
+							<reference key="NSSource" ref="78601372"/>
+							<reference key="NSDestination" ref="594875767"/>
+							<string key="NSLabel">selectedIndex: tool_selected</string>
+							<string key="NSBinding">selectedIndex</string>
+							<string key="NSKeyPath">tool_selected</string>
+							<int key="NSNibBindingConnectorVersion">2</int>
+						</object>
+					</object>
+					<int key="connectionID">384</int>
 				</object>
 			</object>
 			<object class="IBMutableOrderedSet" key="objectRecords">
@@ -1932,7 +1948,7 @@ AAMAAAABAAEAAAFTAAMAAAAEAAAFwgAAAAAACAAIAAgACAABAAEAAQABA</bytes>
 				<reference key="dict.values" ref="0"/>
 			</object>
 			<nil key="sourceID"/>
-			<int key="maxID">372</int>
+			<int key="maxID">385</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<object class="NSMutableArray" key="referencedPartialClassDescriptions">
